// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileCard when the FileCard receives a Document renders a FileCard component without a Button 1`] = `
<div
  className="c-file-card padding-2 margin-bottom-3 display-flex flex-wrap border-1px border-base-lighter"
  data-test="file-card"
>
  <Thumbnail />
  <div
    className="c-file-card__content"
  >
    <Heading
      className="margin-bottom-1 margin-top-1"
      level="3"
      size="4"
    >
      Document 1
    </Heading>
    <div
      className="c-file-card__name padding-bottom-1 margin-bottom-1 margin-top-0 border-bottom-2px border-base-lighter font-heading-xs"
    >
      Date of upload: 11/26/2020
    </div>
    <div
      className="text-italic"
    >
      You can’t remove files previously uploaded.
    </div>
  </div>
</div>
`;

exports[`FileCard when the FileCard receives a File renders 1`] = `
<div
  className="c-file-card padding-2 margin-bottom-3 display-flex flex-wrap border-1px border-base-lighter"
  data-test="file-card"
>
  <Thumbnail
    file={File {}}
  />
  <div
    className="c-file-card__content"
  >
    <Heading
      className="margin-bottom-1 margin-top-1"
      level="3"
      size="4"
    >
      Document 1
    </Heading>
    <div
      className="c-file-card__name padding-bottom-1 margin-bottom-1 margin-top-0 border-bottom-2px border-base-lighter font-heading-xs"
    >
      foo.png
    </div>
    <Button
      className="text-error hover:text-error-dark active:text-error-darker margin-top-0"
      onClick={[Function]}
      variation="unstyled"
    >
      Remove file
    </Button>
  </div>
</div>
`;

exports[`FileCard when the FileCard receives a File renders the error message 1`] = `
<p
  className="text-error"
>
  error
</p>
`;
